--- a/.github/workflows/publish-to-npm.yaml
+++ b/.github/workflows/publish-to-npm.yaml
@@ -1,22 +1,18 @@
-name: Publish package to GitHub Packages
+name: Publish package to npm
 on:
   release:
     types: [published]
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
+    # Remove the GitHub packages permissions block
     steps:
       - uses: actions/checkout@v4
-      # Setup .npmrc file to publish to GitHub Packages
       - uses: actions/setup-node@v4
         with:
           node-version: '22'
-          registry-url: 'https://npm.pkg.github.com'
-          # Defaults to the user or organization that owns the workflow file
-          scope: '@yilengyao'
+          registry-url: 'https://registry.npmjs.org'
+          # Remove the scope: '@yilengyao' line
       - run: npm ci
       - run: npm publish
         env:
